GjsContext: add the concept of "current context"

Just a static global variable holding the GjsContext. There should
be at most one context at any time, and this is enforced by
make_current() checking the current context.
For backward compatibility, any new GjsContext is immediately made current,
which means that code that uses multiple context without handling
the current one manually will assert now. You can still use multiple
contexts if you take care to clear the current one.

This will be used to avoid passing a JSContext where we can't easily.

https://bugzilla.gnome.org/show_bug.cgi?id=699817